--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -1,4 +1,4 @@
-.wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-using{
+.wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-using, .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-power{
     background: #FD5C0E;
     border-radius: 5px;
     border-bottom: 3px solid #c74000;
@@ -6,7 +6,6 @@
 .wui-powerme-container .wui-i-body{
     background: #FEF6C5;
     padding: 10px 0;
-    margin-bottom: 40px;
 }
 .wui-powerme-container .wui-i-timing i{
     background-position: -49px 0;
