--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -53,7 +53,7 @@
                     <div class="wui-i-helper-title-content">
                         <i class="wui-i-star"></i><b>助力值TOP100</b><i class="wui-i-star"></i></div>
                     </div>
-                <ul class="wa-top100">
+                <ul class="wa-top100" style="margin-bottom: 45px;">
                     <li>
                         <span>排名</span>
                         <span>会员</span>
