--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -54,7 +54,7 @@
                         <i class="wui-i-star"></i><b>助力值TOP100</b><i class="wui-i-star"></i></div>
                     </div>
                 <ul class="wa-top100">
-                    <li>
+                    <li class="wui-i-top100-title">
                         <span>排名</span>
                         <span>会员</span>
                         <span class="fr">助力值</span>
