--- a/weapp/apps/customerized_apps/powerme/templates/editor/powerme_participances.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/powerme_participances.html
@@ -59,7 +59,7 @@
 		<div class="xui-i-col">
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
-				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a class="btn btn-default xui-fontBold xa-export" href="javascript:void(0);">批量导出</a>
 			</div>
 		</div>
 	</div>
@@ -117,7 +117,7 @@
 				    ${item.power}
 				</td>
 				<td>
-{#					${item.created_at}#}
+					${item.created_at}
 				</td>
 			</tr>
 			{{/each}}
@@ -159,6 +159,38 @@ $(document).ready(function() {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
+    //export
+    $('.xa-export').click(function(event){
+        W.getLoadingView();
+		var participant_name = $.trim($('[name="participant_name"]').val());
+		var startTime = $.trim($('[name="start_time"]').val());
+		var endTime = $.trim($('[name="end_time"]').val());
+        var export_id =window.location.search.split('?id=')[1];
+        W.getApi().call({
+            method: 'get',
+            app: 'apps/powerme',
+            resource: 'powerme_participances_export',
+            args: {
+				'export_id': export_id,
+				'name': participant_name,
+				'start_time': startTime,
+				'end_time': endTime
+			},
+            success: function(resp){
+                if(resp.code == 200){
+                    $('#export_href').prop({
+                        'href': resp.download_path,
+                        'download': resp.filename
+                    }).get(0).click();
+
+                }
+                console.log("导出成功");
+            },
+            error: function(error){
+                console.log('导出失败');
+            }
+        });
+    });
 });
 </script>
 {% endblock %}
