--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -62,8 +62,11 @@ hr{
 }
 .wui-powerme-container .wui-i-states ul li{
     text-align: left;
-    margin: 0 10px;
     line-height: 50px;
+    margin: 5px 10px 0;
+}
+.wui-powerme-container .wui-i-states ul li:not(.wui-i-top100-title){
+    border-bottom: 1px dotted #ffffff;
 }
 .wui-powerme-container .wui-i-states ul li:nth-child(1) span{
     min-width: 45px;
@@ -89,8 +92,8 @@ hr{
     width: 45%;
 }
 .wui-powerme-container .wui-i-helper-title-content {
-    margin-left: 22%;
-    width: 56%;
+  margin-left: 27%;
+  width: 47%;
 }
 .wui-powerme-container .wui-i-timing i{
     background: url("/termite_static/img/component/powerme/icon_sprite.png") no-repeat;
@@ -103,7 +106,7 @@ hr{
 .wui-powerme-container .wui-i-rules .wui-i-star, .wui-powerme-container .wui-i-states .wui-i-star{
     background: url("/termite_static/img/component/powerme/icon_sprite.png") no-repeat;
     background-size: 940% 420%;
-    width: 33px;
+    width: 30px;
     height: 17px;
     display: inline-block;
 }
@@ -148,7 +151,13 @@ hr{
   text-align: center;
   width: 61px;
 }
+.wa-top100 #4{
+  margin-left: 10px;
+}
 .wui-powerme-container .wui-i-top100-name img {
-  margin: 0 5px 0 0;
+  border: 2px solid #ffffff;
+  border-radius: 23px;
+  margin-bottom: -13px;
+  margin-right: 5px;
   width: 40px;
 }
