--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -131,6 +131,7 @@ hr{
     width: 50px;
     margin-left: -8px;
     text-align: center;
+    padding-right: 0;
 }
 .wa-top100 li:nth-child(2) .wui-i-top100-range {
   background-position: -156px 7px;
@@ -141,8 +142,9 @@ hr{
 .wa-top100 li:nth-child(4) .wui-i-top100-range {
   background-position: -269px 7px;
 }
-.wa-top100 #4{
-  margin-left: 10px;
+.wui-i-top100-range{
+    margin-left: 12px;
+    padding-right: 21px;
 }
 .wui-powerme-container .wui-i-top100-name img {
   border: 2px solid #ffffff;
