--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
@@ -211,8 +211,9 @@ $(document).ready(function(){
         var process_score = $('#dj_process_score').data('value');
         var picture_list = [];
         var webapp_owner_id = $('#dj_request_owner_id').data('value');
-        $('.xui-uploadImage img').each(function(){
-                  if($(this).attr('src').indexOf('data:image') != -1){picture_list.push($(this).attr('src'))}
+        $('.xui-imgList img').each(function(){
+                  console.info($(this).attr('data-src'))
+                  picture_list.push($(this).attr('data-src'))
         });
         if(!created){
             if (!slag){return;}
