--- a/weapp/termite/static/css/apps/powerme_red.css
+++ b/weapp/termite/static/css/apps/powerme_red.css
@@ -6,6 +6,7 @@
 .wui-powerme-container .wui-i-body{
     background: #e63041;
     padding: 10px 0;
+    margin-bottom: 50px;
 }
 .wui-powerme-container .wui-i-timing i{
     background-position: -49px -40px;
