--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -132,8 +132,8 @@
     <div class="xui-attention xa-attention none">
         <div class="xui-twoDimensionBox">
             <p style="margin-left: 8px;margin-top: 32px;">1、长按二维码关注“</p><p style="color: orangered">{{ mpUserPreviewName }}</p><p>”公众号</p>
-            <img src="{{ qrcode_url }}" alt="" class="xui-twoDimension">
-            <p style="margin-left:10px;margin-top:10px;">2、回复：“</p><p style="color: orangered">{{ reply_content|safe }}</p><p>”，即可参加活动</p>
+            <img src="{{ qrcode_url }}" alt="" class="xui-twoDimension"><br>
+            <p style="margin-left:10px;margin-top:167px;">2、回复：“</p><p style="color: orangered">{{ reply_content|safe }}</p><p>”，即可参加活动</p>
             <div class="xui-closeBtn xa-closeBtn"></div>
         </div>
     </div>
