update power mobile

--- a/weapp/termite/static/css/apps/powerme_orange.css
+++ b/weapp/termite/static/css/apps/powerme_orange.css
@@ -5,8 +5,7 @@
 }
 .wui-powerme-container .wui-i-body{
     background: #ff7d42;
-    padding: 10px 0;
-    margin-bottom: 50px;
+    padding: 10px 0 50px;
 }
 .wui-powerme-container .wui-i-timing i{
     background-position: -49px -40px;
