--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -5,8 +5,7 @@
 }
 .wui-powerme-container .wui-i-body{
     background: #FEF6C5;
-    padding: 10px 0;
-    margin-bottom: 50px;
+    padding: 10px 0 50px;
 }
 .wui-powerme-container .wui-i-timing i{
     background-position: -49px 0;
