--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -242,8 +242,10 @@
     }
 
     function showMyRank(){
+        var $win = $(window);
+        var h = $('body').height() - $('.wa-top100').offset().top;
         window.onscroll = function(){
-            if($(window).scrollTop() - $('.wa-top100').offset().top + $('.wa-top100').height() > 0){
+            if($win.scrollTop() - h > 0){
                 $('.wa-masterinfo').show();
             }else{
                 $('.wa-masterinfo').hide();
