--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -59,6 +59,7 @@ hr{
     padding: 7px 5px;
     color: white;
     border-radius: 2px;
+    font-family: '微软雅黑';
 }
 .wui-powerme-container .wui-i-states ul li{
     text-align: left;
