--- a/weapp/card/templates/card/editor/weizoom_num_card_detail.html
+++ b/weapp/card/templates/card/editor/weizoom_num_card_detail.html
@@ -32,7 +32,8 @@
                     <div class="xui-i-description">面值：{{card.rule_money}}</div>
                 </div>
                 <div style="float:left;width:25%">
-                    <div class="xui-i-description">密码：{{card.password}}</div>
+                    <div class="xui-i-description">
+                    密码：{% if password_is_show %}{{card.password}}{% else %}*******{% endif %}</div>
                     <div class="xui-i-description">状态：{{card.status_str}}</div>
                 </div>
                 
@@ -72,6 +73,27 @@
     {% endif %}
     </div>
 
+
+    <div class="panel  panel-default mt20 pr" style="background-color:#EAEEF6">
+        <div class="panel-heading" style="font-size:16px">操作记录</div>
+        {% if card_operations %}
+        <div 
+            data-ui-role="advanced-table" 
+            data-app="card" 
+            data-resource="card_num_operations/get"
+            data-template-id="#card-operation-list"
+            data-enable-paginator="false" 
+            data-enable-sort="false" 
+            data-auto-load="true"
+            class="panel-body"
+            data-args='{"card_id":"{{card.weizoom_card_id}}"}'
+        ></div>
+        
+        {% else %}
+        <div class="xui-emptyBox"><img src="/static_v2/img/editor/empty.png"><span class="ml20">您还没有相关数据！</span></div>
+        {% endif %}
+    </div>
+
 {% verbatim %}
 <script id="card-detail-list" type="text/x-jquery-tmpl">
     <div class="panel panel-default mt20 xb-rightPanel pr">
@@ -105,6 +127,34 @@
     </div>
 </script>
 
+
+<!-- 操作记录 -->
+<script id="card-operation-list" type="text/x-jquery-tmpl">
+    <div class="panel panel-default mt20 xb-rightPanel pr">
+        <table class="table table-bordered xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg">
+            <thead>
+                <tr>
+                    <th style="width: 20%">操作时间</th>
+                    <th style="width: 20%">用户名</th>
+                    <th>申请人</th>
+                    <th>备注</th>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody>
+            {{each(i,card_operation) items}}
+                <tr>
+                    <td>${card_operation.created_at}</td>
+                    <td>${card_operation.operater_name}</td>
+                    <td>${card_operation.activated_to}</td>
+                    <td>${card_operation.remark}</td>
+                    <td>${card_operation.operate_log}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
+</script>
 {% endverbatim %}
 
 {% endblock %}
@@ -159,6 +209,7 @@ $(document).ready(function() {
         });
     });
 });
+
 </script>
 
 {% endblock %}
