--- a/weapp/templates/card_base.html
+++ b/weapp/templates/card_base.html
@@ -41,11 +41,18 @@
 		<div class="xui-i pr">
 			<ul class="xui-navBar-box clearStyle">
 				{% if first_navs %}
-					{% for nav in first_navs %}
-					<li {% ifequal nav.name '大数据挖掘' %}class="xui-i-bigDataTab"{% endifequal %}>
-						<a {% ifequal first_nav_name nav.inner_name %}class="active"{% endifequal %} href='{{nav.url}}' title='{{nav.name}}'>{{nav.name}}</a>
-					</li>
-					{% endfor %}
+					{% ifequal first_nav_name 'card' %}
+						<li>
+							<a {% ifequal first_nav_name 'card' %}class="active"{% endifequal %} href='/card/cards/get/' title='微众卡管理'>微众卡管理</a>
+						</li>
+					{% else %}
+
+						{% for nav in first_navs %}
+						<li {% ifequal nav.name '大数据挖掘' %}class="xui-i-bigDataTab"{% endifequal %}>
+							<a {% ifequal first_nav_name nav.inner_name %}class="active"{% endifequal %} href='{{nav.url}}' title='{{nav.name}}'>{{nav.name}}</a>
+						</li>
+						{% endfor %}
+					{% endifequal %}
 				{% else %}
 					<li>
 						<a {% ifequal first_nav_name 'card' %}class="active"{% endifequal %} href='/card/cards/get/' title='微众卡管理'>微众卡管理</a>
@@ -67,7 +74,7 @@
 				{% for second_nav in second_navs %}
 					{% for nav in second_nav.navs %}
 							<li class="{% ifequal second_nav_name nav.name %}active{% endifequal %}">
-							<a href="{{nav.url}}" title="{{nav.title}}" name="{{nav.name}}">
+							<a {% if nav.uservalue %}{% if request.user.username == 'card_admin' %} {% else %}class="hidden" {% endif %}{% endif %} href="{{nav.url}}" title="{{nav.title}}" name="{{nav.name}}">
 							<i class="xui-icon-sideBar xui-sideBar-{{nav.name}}"></i> {{nav.title|safe}}
 							<i class="xui-icon-arrow"></i>
 							</a>
